--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nelson Luna, Juan Perez",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.5",
